--- a/src/ui.css
+++ b/src/ui.css
@@ -1,10 +1,30 @@
+div {
+  padding-top: 24px;
+}
 span {
   display:inline-block;
   padding: 0;
-  line-height: 80px;
   width: 100%;
   text-align: center;
   vertical-align:middle;
   font-family: sans-serif;
+  font-weight: 500;
+  color: gray;
+}
+
+#issues {
+  margin-top: 4px;
+  display:inline-block;
+  padding: 0;
+  width: 100%;
+  text-align: center;
+  vertical-align:middle;
+  font-family: sans-serif;
+  color: gray;
+  font-size: x-small;
+  font-weight: 300;
+}
+
+#issues *:any-link {
   color: gray;
 }
